objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>Current status of the implementation of the User Story.</description>
        <inlineHelpText>Current status of the implementation of the User Story.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for testing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Ready for UAT</fullName>
                </value>
                <value>
                    <fullName>Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Backlog</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Stop_Indexing_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</description>
        <inlineHelpText>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</inlineHelpText>
        <label>Exclude from Overlap Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_Other__c</fullName>
        <inlineHelpText>The estimated effort your team plans to allocate on implementing, reviewing, testing, and documenting the User Story.</inlineHelpText>
        <label>Planned Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_SFDC__c</fullName>
        <inlineHelpText>The actual effort the team put into the implementation, reviews, testing, and documentation of the User Story.</inlineHelpText>
        <label>Actual Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team which will tackle the User Story.</description>
        <inlineHelpText>Team which will tackle the User Story.</inlineHelpText>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
        <inlineHelpText>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within</inlineHelpText>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Actual_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c + copado__Actual_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Actual Points and Actual Points Other. Use this field along with Actual Points Other if you need to split your User Story effort among different scopes.</inlineHelpText>
        <label>Total Actual Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_Other__c + copado__Planned_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Planned Points and Planned Points Other. Use this field along with Planned Points Other if you need to split your User Story effort estimation among different scopes.</inlineHelpText>
        <label>Total Planned Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__US_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		IF(
		AND(
			NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	)
	),
	&apos;feature/&apos; + Name
)</formula>
        <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__Connect_log__c</fullName>
        <label>Connect log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copadoconnect__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadoconnect__Last_Synced_Date__c</fullName>
        <label>Last Synced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__Business_Disruption_Failure__c</fullName>
        <formula>IF(OR(TEXT(copadometrics__Severity__c) == &apos;P0 - Blocker - Business Disruption&apos;, TEXT(copadometrics__Severity__c) == &apos;P1 - Critical - No Workaround&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Disruption Failure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Development_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve__c</fullName>
        <formula>TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
))

&amp; &quot; days &quot; &amp;

TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(MOD((NOW() - CreatedDate)*24, 24))
,
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24))
))
 
&amp; &quot; hours &quot; &amp; 

TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_days__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_hours__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(MOD((NOW() - CreatedDate)*24, 24))
,
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_minutes__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Ready_to_Promote_Time__c</fullName>
        <label>First Ready to Promote Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Time_Promoted_to_Production__c</fullName>
        <label>First Time Promoted to Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__Found_in_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Found in Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories (Found in Promotion)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time__c</fullName>
        <formula>TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)) 
&amp; &quot; days &quot; &amp; 


TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24))
,
0)) &amp; &quot; hours &quot; &amp; 


TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0))  &amp; &quot; minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_days__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_hours__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24))
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_minutes__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P0 - Blocker - Business Disruption</fullName>
                </value>
                <value>
                    <fullName>P1 - Critical - No Workaround</fullName>
                </value>
                <value>
                    <fullName>P2 - Major</fullName>
                </value>
                <value>
                    <fullName>P3 - Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>Open_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Developer__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Sprint__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Promote_and_Deploy__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__User_Story__c.copado__User_Story</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled,Backlog</value>
        </filters>
        <label>My Open User Stories</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Epic__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Promote_and_Deploy__c</columns>
        <columns>copado__Promote_Change__c</columns>
        <columns>copado__Stop_Indexing_Metadata__c</columns>
        <columns>copado__Exclude_From_CBM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__User_Story__c.copado__User_Story</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <recordTypes>
        <fullName>copado__Bug</fullName>
        <active>true</active>
        <label>Bug</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Investigation</fullName>
        <active>false</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__User_Story</fullName>
        <active>true</active>
        <label>User Story</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Utility</fullName>
        <active>true</active>
        <label>Utility</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ManualTestPassRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
copado__Environment__r.Name=&quot;Dev4&quot;,
copado__Manual_Step_Required__c=TRUE,
copado__Manual_Tests_Passed__c=FALSE,
OR(
copado__Promote_Change__c=TRUE,
copado__Promote_and_Deploy__c=TRUE
)
)</errorConditionFormula>
        <errorMessage>A Manual Test Script Run must be completed and passed before promotion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_US_Promote_Deploy</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
AND(					ISCHANGED(copado__Promote_and_Deploy__c),copado__Promote_and_Deploy__c),
AND(									ISCHANGED(copado__Promote_Change__c),copado__Promote_Change__c)
),	
copado__Environment__r.Validation_Only__c = true,
not($Permission.Enable_Promote_Deploy=true)
)</errorConditionFormula>
        <errorDisplayField>copado__Promote_and_Deploy__c</errorDisplayField>
        <errorMessage>Access restricted to promote and deploy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Cancellation_reason_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
  TEXT(copado__Status__c)==&quot;Cancelled&quot;,
  ISBLANK(copado__Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>copado__Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__CredentialsMustBelongToTheEnvironment</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ( ISBLANK(copado__Environment__c) ) &amp;&amp;
NOT ( ISBLANK(copado__Org_Credential__c) ) &amp;&amp;
copado__Environment__c != copado__Org_Credential__r.copado__Environment__c</errorConditionFormula>
        <errorMessage>The credential must belong to the environment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Excluded_User_Stories_Not_Promotable</fullName>
        <active>true</active>
        <description>If &apos;Excluded from CBM&apos; is enable, the user story can not be mark as &quot;Ready To Promote&quot; or &quot;Promote &amp; Deploy&quot;</description>
        <errorConditionFormula>IF(
  AND(NOT(ISBLANK(copado__Platform__c)), copado__Platform__c != &apos;Salesforce&apos;), 
  (IF(AND(copado__Exclude_From_CBM__c, OR(copado__Promote_Change__c, copado__Promote_and_Deploy__c)), TRUE, FALSE)),
  FALSE
)</errorConditionFormula>
        <errorMessage>You cannot enable the &quot;Ready to Promote&quot; or the &quot;Promote &amp; Deploy&quot; options because the &quot;Exclude from Pipeline&quot; option is enabled. Please disable this option first and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Promote_User_Story_Apex_validation</fullName>
        <active>false</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  copado__Has_Apex_Code__c = true,
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
  OR(
    ISNULL(copado__Apex_Code_Coverage__c),
    ISNULL(copado__Minimum_Apex_Code_Coverage__c),
    copado__Apex_Code_Coverage__c &lt; copado__Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__Test_scratch_orgs_cannot_be_used_for_dev</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(copado__Org_Credential__r.copado__Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
        <errorDisplayField>copado__Org_Credential__c</errorDisplayField>
        <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>copado__User_Story_Progress_Range_Validation</fullName>
        <active>true</active>
        <description>If User Story has Progress%, it should be in a valid range of 0 to 100.</description>
        <errorConditionFormula>NOT(ISNULL( copado__Progress__c )) &amp;&amp; (copado__Progress__c &lt; 0 || copado__Progress__c &gt; 1)</errorConditionFormula>
        <errorMessage>Enter a value between 0 to 100 to specify the Progress in percentage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>regression_tests_must_be_added</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
copado__Environment__r.Name=&quot;UAT&quot;,
Regression_Ready__c=FALSE,
OR( 
copado__Promote_and_Deploy__c=TRUE,
copado__Promote_Change__c=TRUE)
)</errorConditionFormula>
        <errorDisplayField>Regression_Ready__c</errorDisplayField>
        <errorMessage>Functional tests must be added to broader regression suite before deploying</errorMessage>
    </validationRules>
</CustomObject>